Modifying the VDES1000/GNURadio signature generation procedures for account for the selected signature mode